src/test/ui/self/point-at-arbitrary-self-type-method.stderr
error[E0599]: no method named `foo` found for struct `A` in the current scope
  --> $DIR/point-at-arbitrary-self-type-method.rs:8:7
   |
LL | struct A;
   | --------- method `foo` not found for this
...
LL |     fn foo(self: Box<Self>) {}
   |        --- the method is available for `std::boxed::Box<A>` here
...
LL |     A.foo();
   |       ^^^ method not found in `A`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
